# langChain-Learning

./: README.md  ingestion.py  main.py  pyproject.toml
data/: LLM.docx  MachineLearning.txt
